tests/ui/spirv-attr/invalid-storage-class.stderr
error: `Input` storage class is the default and should not be explicitly specified
 --> $DIR/invalid-storage-class.rs:9:23
  |
9 |     #[rust_gpu::spirv(input)] _: (),
  |                       ^^^^^

error: `Output` storage class is the default and should not be explicitly specified
  --> $DIR/invalid-storage-class.rs:10:23
   |
10 |     #[rust_gpu::spirv(output)] _: (),
   |                       ^^^^^^

error: `Private` storage class can not be used as part of an entry's interface
  --> $DIR/invalid-storage-class.rs:11:23
   |
11 |     #[rust_gpu::spirv(private)] _: (),
   |                       ^^^^^^^

error: `Function` storage class can not be used as part of an entry's interface
  --> $DIR/invalid-storage-class.rs:12:23
   |
12 |     #[rust_gpu::spirv(function)] _: (),
   |                       ^^^^^^^^

error: `Generic` storage class can not be used as part of an entry's interface
  --> $DIR/invalid-storage-class.rs:13:23
   |
13 |     #[rust_gpu::spirv(generic)] _: (),
   |                       ^^^^^^^

error: aborting due to 5 previous errors

